--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Haker News</title>
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="news dal mondo" />
+    <meta property="og:description" content="link alle notizie più recenti" />
+    <title>News</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <div id="divHeader">
-        <h1>Haker News</h1>
-      </div>
-      <div id="newsUl">
-        <ul id="">
-          news1
-        </ul>
+        <h1>News</h1>
       </div>
     </header>
     <main>
-      <button id="loadMoreButton">Load more news</button>
+      <ul>
+        <li>
+          <div class="list-group">
+            <div class="list-group-item list-group-item-action">
+              <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">
+                  E-4B “Doomsday Plane” Just Made Unusual Visit to Tonopah Test
+                  Range Airpor.
+                </h5>
+                <small class="text-body-secondary">3 days ago</small>
+              </div>
+              <p class="mb-1">
+                <a
+                  target="_blank"
+                  class="linkNews"
+                  href="https://www.thedrive.com/the-war-zone/41669/e-4b-doomsday-plane-just-made-highly-unusual-visit-to-secretive-tonopah-test-range-airport"
+                  >https://www.thedrive.com/the-war-zone/41669/e-4b-doomsday-plane-just-made-highly-unusual-visit-to-secretive-tonopah-test-range-airport</a
+                >
+              </p>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <button id="loadMoreButton">Load more</button>
     </main>
-
     <script src="js/index.js"></script>
   </body>
 </html>
