--- a/src/index.html
+++ b/src/index.html
@@ -23,29 +23,7 @@
       </div>
     </header>
     <main>
-      <ul>
-        <li>
-          <div class="list-group">
-            <div class="list-group-item list-group-item-action">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">
-                  E-4B “Doomsday Plane” Just Made Unusual Visit to Tonopah Test
-                  Range Airpor.
-                </h5>
-                <small class="text-body-secondary">3 days ago</small>
-              </div>
-              <p class="mb-1">
-                <a
-                  target="_blank"
-                  class="linkNews"
-                  href="https://www.thedrive.com/the-war-zone/41669/e-4b-doomsday-plane-just-made-highly-unusual-visit-to-secretive-tonopah-test-range-airport"
-                  >https://www.thedrive.com/the-war-zone/41669/e-4b-doomsday-plane-just-made-highly-unusual-visit-to-secretive-tonopah-test-range-airport</a
-                >
-              </p>
-            </div>
-          </div>
-        </li>
-      </ul>
+      <ul id="ulNews"></ul>
       <button id="loadMoreButton">Load more</button>
     </main>
     <script src="js/index.js"></script>
