added function on button

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <ul id="ulNews"></ul>
-      <button id="loadMoreButton">Load more</button>
+      <button id="buttonLoadMore">Load more</button>
     </main>
     <script src="js/index.js"></script>
   </body>
