--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://project-news-page.web.app" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="news dal mondo" />
     <meta property="og:description" content="link alle notizie più recenti" />
